2008-07-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/handlers/kml/KmlCoordinatesTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlInnerBoundaryIsTagHandler{.h|.cpp}
    * src/lib/geodata/handlers/kml/KmlLinearRingTagHandler{.h|.cpp}
    * src/lib/geodata/handlers/kml/KmlLineStringTagHandler{.h|.cpp}
    * src/lib/geodata/handlers/kml/KmlOuterBoundaryIsTagHandler{.h|.cpp}
    * src/lib/geodata/handlers/kml/KmlPointTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlPolygonTagHandler{.h|.cpp}

    (2/2) parse remaining geometry objects and change existing Point and 
    Coordinates

2008-07-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataLineString{.h|.cpp}
    * src/lib/geodata/data/GeoDataMultiGeometry{.h|.cpp}
    * src/lib/geodata/data/GeoDataPlacemark{.h|.cpp}
    * src/lib/geodata/data/GeoDataPolygon{.h|.cpp}

    (1/2) add remaining geometry objects and save them in Placemark

2008-07-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/handlers/kml/KmlAltitudeModeTagHandler{.h|.cpp}
    * src/lib/geodata/handlers/kml/KmlExtrudeTagHandler{.h|.cpp}
    * src/lib/geodata/handlers/kml/KmlTessellateTagHandler{.h|.cpp}

    add tags for missing properties

2008-07-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/handlers/kml/KmlDocumentTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlFolderTagHandler.cpp
    * src/lib/geodata/handlers/kml/KmlLabelStyleTagHandler.cpp

    fix more possible memory leaks and unify debug output

2008-07-06  Patrick Spendrin    <ps_ml@gmx.de>

    * src/lib/geodata/data/GeoDataCoordinates{.h|.cpp}
    * src/lib/geodata/data/GeoDataDocument.cpp
    * src/lib/geodata/data/GeoDataGeometry{.h|.cpp}
    * src/lib/geodata/data/GeoDataPoint{.h|.cpp}

    fix setter in GeoDataCoordinates
    fix missing tessellate, altitudeMode and extrude properties in GeoDataGeometry
    fix missing setter in GeoDataPoint

2008-07-03  Patrick Spendrin    <ps_ml@gmx.de>
